@@ -1,14 +1,8 @@
-FROM jenkins/jenkins:lts-alpine
+FROM maven:3.9.6-eclipse-temurin-17 AS builder
+WORKDIR /app
+COPY . .
+RUN mvn clean install -DskipTests
 
-ARG VERSION=1.15.2
-RUN /usr/local/bin/install-plugins.sh kubernetes:${VERSION}
-
-# COPY target/kubernetes.hpi /usr/share/jenkins/ref/plugins/kubernetes.hpi
-# RUN curl -o /usr/share/jenkins/ref/plugins/kubernetes.hpi \
-#  http://repo.jenkins-ci.org/snapshots/org/csanchez/jenkins/plugins/kubernetes/0.12/kubernetes-$VERSION.hpi
-
-# remove executors in master
-COPY src/main/docker/master-executors.groovy /usr/share/jenkins/ref/init.groovy.d/
-
-# ENV JAVA_OPTS="-Djava.util.logging.config.file=/var/jenkins_home/log.properties"
-ENV JAVA_OPTS="-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -XX:MaxRAMFraction=1 -XshowSettings:vm"
+FROM eclipse-temurin:17-jdk
+COPY --from=builder /app/target/*.hpi /plugin.hpi
+CMD ["ls", "-lh", "/plugin.hpi"]
